--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sambhaji9/johannesburg#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.1",
     "mongodb": "^4.2.2"
   }
